samples/_failures_safe/1761635932_0a5868_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_733cdfb4.c: In function ‘main’:
./samples/SAFE/__tmp_733cdfb4.c:155:5: error: expected expression at end of input
  155 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_733cdfb4.c:155:5: error: expected declaration or statement at end of input
